--- a/index.html
+++ b/index.html
@@ -49,10 +49,8 @@
  <br>
  <label  for="age">Enter your name</label>
  <input class="name" type="text" id="age" placeholder="enter your name">
- </label>
+ <br>
+<input class="submit" type="submit" value="send">
 </form>
-<input class="submit" type="submit" id="submit">
-<label for="submit"></label>
-
 </body>
 </html>
